# libsais-packed

./: CMakeLists.txt  README.md
benchmark_code/include/: bitpacking.h
benchmark_code/src/: bitpacking.c  main-dna.c  main.c
example_data/: human_genome.1000.txt  uniprot_entries.1000.txt
include/: bitpacking.h  libsais16x64.h  libsais32x64.h  libsais64.h
libsais/src/: libsais64.c
src/: bitpacking.c  libsais16x64.c  libsais32x64.c  libsais64.c  main.c
